objects/eDRAM__c.object
<CustomObject>
    <fields>
        <fullName>BX_041__c</fullName>
        <label>BX-041</label>
        <referenceTo>BX_041__c</referenceTo>
        <relationshipLabel>eDRAM</relationshipLabel>
        <relationshipName>eDRAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Metadata</label>
        <referenceTo>Question_Metadata__c</referenceTo>
        <relationshipLabel>eDRAM</relationshipLabel>
        <relationshipName>eDRAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eDRAM_Name__c</fullName>
        <label>eDRAM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eDRAM</label>
    <nameField>
        <displayFormat>ED-{00000}</displayFormat>
        <label>eDRAM  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eDRAM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>